--- a/index.html
+++ b/index.html
@@ -119,29 +119,37 @@
           <div class="premium__features-card--img">
             <img src="images/landing/Offline.png" alt="" />
           </div>
-          <div class="text-box">Offline mode.</div>
-          <div class="text-box-mini">Save and listen anywhere.</div>
+          <div class="premium__features-card-box">
+            <div class="text-box">Offline mode.</div>
+            <div class="text-box-mini">Save and listen anywhere.</div>
+          </div>
         </div>
         <div class="premium__features-card">
           <div class="premium__features-card--img">
             <img src="images/landing/HQ.png" alt="" />
           </div>
-          <div class="text-box">High quality audio.</div>
-          <div class="text-box-mini">Enjoy the full range of sound.</div>
+          <div class="premium__features-card-box">
+            <div class="text-box">High quality audio.</div>
+            <div class="text-box-mini">Enjoy the full range of sound.</div>
+          </div>
         </div>
         <div class="premium__features-card">
           <div class="premium__features-card--img">
             <img src="images/landing/No-ads.png" alt="" />
           </div>
-          <div class="text-box">No ads.</div>
-          <div class="text-box-mini">Enjoy nonstop music.</div>
+          <div class="premium__features-card-box">
+            <div class="text-box">No ads.</div>
+            <div class="text-box-mini">Enjoy nonstop music.</div>
+          </div>
         </div>
         <div class="premium__features-card">
           <div class="premium__features-card--img">
             <img src="images/landing/Skips.png" alt="" />
           </div>
-          <p class="text-box">Unlimited skips</p>
-          <p class="text-box-mini">Just tap skip.</p>
+          <div class="premium__features-card-box">
+            <p class="text-box">Unlimited skips</p>
+            <p class="text-box-mini">Just tap skip.</p>
+          </div>
         </div>
       </div>
       <h3 class="heading-tertiary">
